@@ -5,12 +5,11 @@ import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.Spy;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.stubbing.Answer;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.autoconfigure.jackson.JacksonAutoConfiguration;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.civil.callback.CallbackParams;
 import uk.gov.hmcts.reform.civil.enums.CaseState;
@@ -22,6 +21,7 @@ import uk.gov.hmcts.reform.civil.ga.model.GeneralApplicationCaseData;
 import uk.gov.hmcts.reform.civil.ga.model.genapplication.GeneralApplicationPbaDetails;
 import uk.gov.hmcts.reform.civil.ga.model.genapplication.HelpWithFeesDetails;
 import uk.gov.hmcts.reform.civil.ga.service.GaPaymentRequestUpdateCallbackService;
+import uk.gov.hmcts.reform.civil.testutils.ObjectMapperFactory;
 import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
 import uk.gov.hmcts.reform.civil.model.Fee;
 import uk.gov.hmcts.reform.civil.model.citizenui.HelpWithFees;
@@ -30,7 +30,6 @@ import uk.gov.hmcts.reform.civil.model.genapplication.GAApplicationType;
 import uk.gov.hmcts.reform.civil.ga.service.HwfNotificationService;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -48,22 +47,20 @@ import static uk.gov.hmcts.reform.civil.callback.CaseEvent.INITIATE_GENERAL_APPL
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.UPDATE_GA_ADD_HWF;
 import static uk.gov.hmcts.reform.civil.enums.dq.GeneralApplicationTypes.STRIKE_OUT;
 
-@ExtendWith(SpringExtension.class)
-@SpringBootTest(classes = {
-    GaFeePaymentOutcomeHWFCallBackHandler.class,
-    JacksonAutoConfiguration.class
-})
+@ExtendWith(MockitoExtension.class)
 public class GaFeePaymentOutcomeHWFCallBackHandlerTest extends GeneralApplicationBaseCallbackHandlerTest {
 
-    @Autowired
+    @Spy
+    private ObjectMapper mapper = ObjectMapperFactory.instance();
+
+    @InjectMocks
     private GaFeePaymentOutcomeHWFCallBackHandler handler;
-    @Autowired
-    private ObjectMapper mapper = new ObjectMapper();
-    @MockBean
+
+    @Mock
     private GaPaymentRequestUpdateCallbackService service;
-    @MockBean
+    @Mock
     private HwfNotificationService hwfNotificationService;
-    @MockBean
+    @Mock
     private FeatureToggleService featureToggleService;
 
     @Test
@@ -77,14 +74,14 @@ public class GaFeePaymentOutcomeHWFCallBackHandlerTest extends GeneralApplicatio
         @Test
         void updateFeeType_shouldSetAdditionalFeeTypeWithEmptyRef_whenCaseStateIsApplicationAddPayment() {
             // Arrange
-            GeneralApplicationCaseData caseData = GeneralApplicationCaseData.builder()
+            GeneralApplicationCaseData caseData = new GeneralApplicationCaseData()
                 .ccdState(CaseState.APPLICATION_ADD_PAYMENT)
                 .generalAppHelpWithFees(new HelpWithFees())
                 .hwfFeeType(FeeType.ADDITIONAL)
-                .generalAppPBADetails(GeneralApplicationPbaDetails.builder().fee(
-                    Fee.builder()
-                        .calculatedAmountInPence(BigDecimal.valueOf(180))
-                        .code("FEE123").build()).build())
+                .generalAppPBADetails(new GeneralApplicationPbaDetails().setFee(
+                    new Fee()
+                        .setCalculatedAmountInPence(BigDecimal.valueOf(180))
+                        .setCode("FEE123")))
                 .build();
 
             // Act
@@ -99,7 +96,7 @@ public class GaFeePaymentOutcomeHWFCallBackHandlerTest extends GeneralApplicatio
         @Test
         void updateFeeType_shouldSetAdditionalFeeTypeWithRef_whenCaseStateIsApplicationAddPayment() {
             // Arrange
-            GeneralApplicationCaseData caseData = GeneralApplicationCaseData.builder()
+            GeneralApplicationCaseData caseData = new GeneralApplicationCaseData()
                 .ccdState(CaseState.APPLICATION_ADD_PAYMENT)
                 .hwfFeeType(FeeType.ADDITIONAL)
                 .generalAppHelpWithFees(new HelpWithFees().setHelpWithFeesReferenceNumber("123"))
@@ -118,14 +115,14 @@ public class GaFeePaymentOutcomeHWFCallBackHandlerTest extends GeneralApplicatio
         @Test
         void updateFeeType_shouldSetApplicationFeeTypeWithEmptyRef_whenCaseStateIsNotApplicationAddPayment() {
             // Arrange
-            GeneralApplicationCaseData caseData = GeneralApplicationCaseData.builder()
+            GeneralApplicationCaseData caseData = new GeneralApplicationCaseData()
                 .ccdState(CaseState.AWAITING_RESPONDENT_RESPONSE)
                 .hwfFeeType(FeeType.APPLICATION)
                 .generalAppHelpWithFees(new HelpWithFees())
-                .generalAppPBADetails(GeneralApplicationPbaDetails.builder().fee(
-                    Fee.builder()
-                        .calculatedAmountInPence(BigDecimal.valueOf(180))
-                        .code("FEE123").build()).build())
+                .generalAppPBADetails(new GeneralApplicationPbaDetails().setFee(
+                    new Fee()
+                        .setCalculatedAmountInPence(BigDecimal.valueOf(180))
+                        .setCode("FEE123")))
                 .build();
 
             // Act
@@ -141,7 +138,7 @@ public class GaFeePaymentOutcomeHWFCallBackHandlerTest extends GeneralApplicatio
         @Test
         void updateFeeType_shouldSetApplicationFeeTypeWithRef_whenCaseStateIsNotApplicationAddPayment() {
             // Arrange
-            GeneralApplicationCaseData caseData = GeneralApplicationCaseData.builder()
+            GeneralApplicationCaseData caseData = new GeneralApplicationCaseData()
                 .ccdState(CaseState.AWAITING_RESPONDENT_RESPONSE)
                 .hwfFeeType(FeeType.APPLICATION)
                 .generalAppHelpWithFees(new HelpWithFees().setHelpWithFeesReferenceNumber("123"))
@@ -165,15 +162,15 @@ public class GaFeePaymentOutcomeHWFCallBackHandlerTest extends GeneralApplicatio
         @Test
         void shouldValidationFeePaymentOutcomeGa_withInvalidOutstandingFee() {
             //Given
-            GeneralApplicationCaseData caseData = GeneralApplicationCaseData.builder()
+            GeneralApplicationCaseData caseData = new GeneralApplicationCaseData()
                     .feePaymentOutcomeDetails(new FeePaymentOutcomeDetails()
                             .setHwfNumberAvailable(YesOrNo.YES)
                             .setHwfNumberForFeePaymentOutcome("HWF-1C4-E34")
                             .setHwfFullRemissionGrantedForGa(YesOrNo.YES))
                     .hwfFeeType(FeeType.APPLICATION)
-                    .gaHwfDetails(HelpWithFeesDetails.builder()
-                            .outstandingFee(BigDecimal.valueOf(100.00))
-                            .build())
+                    .gaHwfDetails(new HelpWithFeesDetails()
+                            .setOutstandingFee(BigDecimal.valueOf(100.00))
+                            )
                     .build();
             //When
             CallbackParams params = callbackParamsOf(caseData, MID, "remission-type");
@@ -185,15 +182,15 @@ public class GaFeePaymentOutcomeHWFCallBackHandlerTest extends GeneralApplicatio
         @Test
         void shouldValidationFeePaymentOutcomeAdditional_withInvalidOutstandingFee() {
             //Given
-            GeneralApplicationCaseData caseData = GeneralApplicationCaseData.builder()
+            GeneralApplicationCaseData caseData = new GeneralApplicationCaseData()
                     .feePaymentOutcomeDetails(new FeePaymentOutcomeDetails()
                             .setHwfNumberAvailable(YesOrNo.YES)
                             .setHwfNumberForFeePaymentOutcome("HWF-1C4-E34")
                             .setHwfFullRemissionGrantedForAdditionalFee(YesOrNo.YES))
                     .hwfFeeType(FeeType.ADDITIONAL)
-                    .additionalHwfDetails(HelpWithFeesDetails.builder()
-                            .outstandingFee(BigDecimal.valueOf(100.00))
-                            .build())
+                    .additionalHwfDetails(new HelpWithFeesDetails()
+                            .setOutstandingFee(BigDecimal.valueOf(100.00))
+                            )
                     .build();
             //When
             CallbackParams params = callbackParamsOf(caseData, MID, "remission-type");
@@ -207,14 +204,14 @@ public class GaFeePaymentOutcomeHWFCallBackHandlerTest extends GeneralApplicatio
     class AboutToSubmitCallback {
         @Test
         void shouldTrigger_after_payment_GaFee() {
-            List<GeneralApplicationTypes> types = Arrays.asList(STRIKE_OUT);
-            GeneralApplicationCaseData caseData = GeneralApplicationCaseData.builder()
-                    .generalAppPBADetails(GeneralApplicationPbaDetails.builder().fee(
-                                    Fee.builder()
-                                            .calculatedAmountInPence(BigDecimal.valueOf(10000)).code("OOOCM002").build())
-                            .build())
+            List<GeneralApplicationTypes> types = List.of(STRIKE_OUT);
+            GeneralApplicationCaseData caseData = new GeneralApplicationCaseData()
+                    .generalAppPBADetails(new GeneralApplicationPbaDetails().setFee(
+                                    new Fee()
+                                            .setCalculatedAmountInPence(BigDecimal.valueOf(10000)).setCode("OOOCM002"))
+                            )
                     .generalAppHelpWithFees(new HelpWithFees().setHelpWithFeesReferenceNumber("ref"))
-                    .gaHwfDetails(HelpWithFeesDetails.builder().build())
+                    .gaHwfDetails(new HelpWithFeesDetails())
                 .generalAppType(GAApplicationType.builder().types(types).build())
                     .hwfFeeType(FeeType.APPLICATION)
                     .build();
@@ -233,16 +230,16 @@ public class GaFeePaymentOutcomeHWFCallBackHandlerTest extends GeneralApplicatio
 
         @Test
         void shouldTrigger_after_payment_GaFee_shouldTriggerCosc() {
-            GeneralApplicationCaseData caseData = GeneralApplicationCaseData.builder()
+            GeneralApplicationCaseData caseData = new GeneralApplicationCaseData()
                     .generalAppType(GAApplicationType.builder()
                                         .types(List.of(GeneralApplicationTypes.CONFIRM_CCJ_DEBT_PAID))
                                         .build())
-                    .generalAppPBADetails(GeneralApplicationPbaDetails.builder().fee(
-                                    Fee.builder()
-                                            .calculatedAmountInPence(BigDecimal.valueOf(10000)).code("OOOCM002").build())
-                            .build())
+                    .generalAppPBADetails(new GeneralApplicationPbaDetails().setFee(
+                                    new Fee()
+                                            .setCalculatedAmountInPence(BigDecimal.valueOf(10000)).setCode("OOOCM002"))
+                            )
                     .generalAppHelpWithFees(new HelpWithFees().setHelpWithFeesReferenceNumber("ref"))
-                    .gaHwfDetails(HelpWithFeesDetails.builder().build())
+                    .gaHwfDetails(new HelpWithFeesDetails())
                     .hwfFeeType(FeeType.APPLICATION)
                     .build();
             when(service.processHwf(any(GeneralApplicationCaseData.class)))
@@ -260,14 +257,14 @@ public class GaFeePaymentOutcomeHWFCallBackHandlerTest extends GeneralApplicatio
 
         @Test
         void shouldTrigger_modify_state_additioanlFee() {
-            GeneralApplicationCaseData caseData = GeneralApplicationCaseData.builder()
-                    .generalAppPBADetails(GeneralApplicationPbaDetails.builder().fee(
-                                    Fee.builder()
-                                            .calculatedAmountInPence(BigDecimal.valueOf(10000)).code("OOOCM002").build())
-                            .build())
+            GeneralApplicationCaseData caseData = new GeneralApplicationCaseData()
+                    .generalAppPBADetails(new GeneralApplicationPbaDetails().setFee(
+                                    new Fee()
+                                            .setCalculatedAmountInPence(BigDecimal.valueOf(10000)).setCode("OOOCM002"))
+                            )
                     .generalAppHelpWithFees(new HelpWithFees().setHelpWithFeesReferenceNumber("ref"))
-                    .gaHwfDetails(HelpWithFeesDetails.builder().build())
-                    .additionalHwfDetails(HelpWithFeesDetails.builder().build())
+                    .gaHwfDetails(new HelpWithFeesDetails())
+                    .additionalHwfDetails(new HelpWithFeesDetails())
                     .hwfFeeType(FeeType.ADDITIONAL)
                     .build();
             when(service.processHwf(any(GeneralApplicationCaseData.class)))
